idf_component_register(SRCS "main.cpp" "system\\configurable.cpp" "system\\systemobject.cpp" "ui\\callback.cpp" "gui.cpp" "fonts\\roboto80.c" "imgs\\wifi_48px.c" "imgs\\bg_default.c" "imgs\\sk_statusbar_icon.c" "imgs\\signalk_48px.c" "imgs\\time_48px.c" "imgs\\info_48px.c" "hardware\\Wifi.cpp" "networking\\signalk_socket.cpp" "imgs\\exit_32px.c" "system\\events.cpp")