idf_component_register(SRCS "main.cpp" "system\\configurable.cpp" "system\\systemobject.cpp" "ui\\callback.cpp" "gui.cpp" "fonts\\roboto80.c" "fonts\\roboto70.c" "fonts\\roboto60.c" "fonts\\roboto40.c" "fonts\\roboto30.c" "imgs\\wifi_48px.c" "imgs\\info_48px.c" "imgs\\bg_default.c" "imgs\\sk_statusbar_icon.c" "imgs\\signalk_48px.c" "imgs\\time_48px.c" "imgs\\watch_48px.c" "hardware\\Wifi.cpp" "networking\\signalk_socket.cpp" "imgs\\exit_32px.c" "system\\events.cpp" "imgs\\display_48px.c" "ui\\dynamic_helpers.cpp" "ui\\component_factory.cpp" "ui\\dynamic_gui.cpp" "ui\\dynamic_label.cpp" "hardware\\Hardware.cpp" "system\\async_dispatcher.cpp" "imgs\\wakeup_48px.c" "sounds\\sound_player.cpp" "hardware\\Touch.cpp" "ui\\data_adapter.cpp")